--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" data-section="meta" data-value="lang">
 
 <head>
     <meta charset="utf-8">
@@ -17,64 +17,70 @@
 </head>
 
 <body style="background-color: #0b293d !important;">
-    <!-- AQUÍ COMIENZA EL NAVBAR-->
-    <nav class="navbar navbar-expand-md navbar-light bg-white">
-        <div class="container-fluid nav-tuneado">
-            <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto " style="font-size: 1.1rem !important;">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
-                            data-value="inicio">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sobre-nosotros.html" data-section="nav"
-                            data-value="nosotros">Nosotros</a>
-                    </li>
+   <!-- AQUÍ COMIENZA EL NAVBAR-->
+   <nav class="navbar navbar-expand-md navbar-light bg-white">
+    <div class="container-fluid nav-tuneado">
+        <a class="navbar-brand " href="/"><img src="img/GEONICSA_LOGO.png" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto nav-ul">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html" data-section="nav"
+                        data-value="inicio">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="sobre-nosotros.html" data-section="nav"
+                        data-value="nosotros">Nosotros</a>
+                </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" data-section="nav" data-value="servicios">
-                            Servicios
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios1">Estudios de
-                                    suelos</a></li>
-                            <li><a class="dropdown-item" href="#" data-section="nav" data-value="servicios">Control de
-                                    calidad</a></li>
-                        </ul>
-                    </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="servicios.html" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false" data-section="nav" data-value="servicios">
+                        Servicios
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="estudios-geotecnicos.html" data-section="nav"
+                                data-value="servicio1">Estudios de
+                                suelos</a></li>
+                        <li><a class="dropdown-item" href="control-de-calidad-de-materiales.html" data-section="nav"
+                                data-value="servicio2">Control de
+                                calidad de materiales</a></li>
+                        <li><a class="dropdown-item" href="laboratorio-de-suelos.html" data-section="nav"
+                                data-value="servicio3">Laboratorio de suelos</a></li>
+                        <li><a class="dropdown-item" href="perforacion.html" data-section="nav"
+                                data-value="servicio4">Perforación</a></li>
+                    </ul>
+                </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-section="nav" data-value="proyectos">Proyectos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" data-section="nav" data-value="idioma">
-                            Idioma
-                        </a>
-                        <ul class="dropdown-menu" id="idioma">
-                            <li><a class="dropdown-item" data-language="es" href="#"> <img
-                                        src="https://hatscripts.github.io/circle-flags/flags/es.svg" data-language="es"
-                                        width="30rem"> es</a></li>
-                            <li><a class="dropdown-item" data-language="en" href="#"> <img
-                                        src="https://hatscripts.github.io/circle-flags/flags/us.svg" data-language="en"
-                                        width="30rem"> en</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" data-section="nav" data-value="proyectos">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false" data-section="nav" data-value="idioma">
+                        Idioma
+                    </a>
+                    <ul class="dropdown-menu" id="idioma">
+                        <li><a class="dropdown-item" data-language="es" href="#"> <img
+                                    src="https://hatscripts.github.io/circle-flags/flags/es.svg" data-language="es"
+                                    width="30rem"> es</a></li>
+                        <li><a class="dropdown-item" data-language="en" href="#"> <img
+                                    src="https://hatscripts.github.io/circle-flags/flags/us.svg" data-language="en"
+                                    width="30rem"> en</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
-    </nav>
-    <!-- AQUÍ TERMINA EL NAVBAR-->
+    </div>
+</nav>
+<!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
         <h3>Control de calidad del concreto </h3>
     </div>
