--- a/estudios-geotecnicos.html
+++ b/estudios-geotecnicos.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" data-section="meta" data-value="lang">
 
 <head>
     <meta charset="utf-8">
@@ -96,12 +96,13 @@
                     la capacidad portante, en Geonicsa nos comprometemos a proporcionar datos cruciales para tomar
                     decisiones informadas y mitigar riesgos.
                 </p>
+                <br>
                 <div class="d-flex" style="height: fit-content;">
                     <div class="vr"></div>
                     <div>
                         <ul>
                             <li>
-                                Estudios Geotécnicos de cimentación
+                                <h3 class="fs-5">Estudios Geotécnicos de cimentación</h3>
                                 <p>
                                     Los estudios geotécnicos de cimentación son evaluaciones especializadas que se
                                     llevan a cabo para comprender las características geológicas y geotécnicas del suelo
@@ -113,7 +114,7 @@
                             </li>
 
                             <li>
-                                Diseño de espesores de pavimento
+                                <h3 class="fs-5"> Diseño de espesores de pavimento</h3>
                                 <p>
                                     El diseño de espesores de pavimento es un proceso ingenieril que implica determinar
                                     las dimensiones adecuadas y el tipo de capas que componen un pavimento para
@@ -123,7 +124,8 @@
                                 </p>
                             </li>
                             <li>
-                                Pruebas de Infiltracion.
+                                <h3 class="fs-5"> Pruebas de Infiltracion</h3>
+                                
                                 <p>
                                     Las pruebas de infiltración son procedimientos utilizados para evaluar la capacidad
                                     de un suelo para absorber agua y permitir su paso hacia las capas subyacentes. Estas
