--- a/nuestros-proyectos.html
+++ b/nuestros-proyectos.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es" data-section="meta" data-value="lang">
 
 <head>
     <meta charset="utf-8">
@@ -89,7 +89,7 @@
     <div class="container-fluid rounded-top-4 banner-blanco">
 
         <div class="container">
-            <h2 class="text-center " data-section="proyectos" data-value="titulo">NUESTROS PROYECTOS</h2>
+            <h2 class="text-center " data-section="proyectos" data-value="titulo">TITULO AQUÍ</h2>
             <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
