--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="static/styles.css" rel="stylesheet">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -120,7 +121,7 @@
                 <div class="col-md col-lg-3 ">
                     <div class="card" style="width: 100%; padding:0.5rem !important;">
                         <div class="card-body">
-                            <a href="estudios-de-suelos.html"
+                            <a href="estudios-geotecnicos.html"
                                 class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
                                     viewBox="0 0 16 16" style="width:2rem !important;">
@@ -237,8 +238,6 @@
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                     aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -302,9 +301,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
