Cambios en el navbar y agregué la seccion ctrl de calidad de suelos

--- a/control-calidad-del-concreto.html
+++ b/control-calidad-del-concreto.html
@@ -64,8 +64,8 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false" data-section="nav" data-value="idioma">
-                        Idioma
+                        aria-expanded="false">
+                        <img src="./img/icons/lang_icon.png" class="lang-icon">
                     </a>
                     <ul class="dropdown-menu" id="idioma">
                         <li><a class="dropdown-item" data-language="es" href="#"> <img
@@ -98,7 +98,7 @@
         <div class="row descripcion-servicio">
             <div class="col-md">
 
-                <div class="card">
+                <div class="card card-desc">
                     <div class="card-body">
                         <h4 class="text-center fs-5">Cilindros de Concreto</h4>
                         <p> Los cilindros de concreto se utilizan para realizar pruebas de resistencia a la
@@ -114,7 +114,7 @@
             </div>
             <div class="col-md">
 
-                <div class="card">
+                <div class="card card-desc">
                     <div class="card-body">
                         <h4 class="text-center fs-5">Viguetas de Concreto</h4>
                         <p>
@@ -132,7 +132,7 @@
 
 
             <div class="col-md ">
-                <div class="card">
+                <div class="card card-desc">
                     <div class="card-body">
                         <h4 class="text-center fs-5">Cubos de concreto</h4>
                         <p>
@@ -150,7 +150,7 @@
         </div>
         <div class="row descripcion-servicio">
             <div class="col-md ">
-                <div class="card">
+                <div class="card card-desc">
                     <div class="card-body">
                         <h4 class="text-center fs-5">Martillo Suizo (Esclerómetro)</h4>
                         <p>
@@ -168,7 +168,7 @@
             </div>
 
             <div class="col-md ">
-                <div class="card">
+                <div class="card card-desc">
                     <div class="card-body">
                         <h4 class="text-center fs-5">Extracción de Núcleos</h4>
                         <p>
