--- a/control-de-calidad-de-materiales.html
+++ b/control-de-calidad-de-materiales.html
@@ -64,8 +64,8 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" data-section="nav" data-value="idioma">
-                            Idioma
+                            aria-expanded="false">
+                            <img src="./img/icons/lang_icon.png" class="lang-icon">
                         </a>
                         <ul class="dropdown-menu" id="idioma">
                             <li><a class="dropdown-item" data-language="es" href="#"> <img
@@ -119,7 +119,7 @@
             <div class="col-md col-lg-3 ">
                 <div class="card" style="width: 100%; padding:0.5rem !important;">
                     <div class="card-body">
-                        <a href="#calidad-suelos"
+                        <a href="control-de-calidad-de-suelos.html"
                             class=" icon-link stretched-link link-offset-2 link-underline link-underline-opacity-0">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box"
                                 viewBox="0 0 16 16" style="width:2rem !important;">
