--- a/control-de-calidad-de-suelos.html
+++ b/control-de-calidad-de-suelos.html
@@ -82,97 +82,62 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3 >NUESTROS PROYECTOS</h3>
+        <h3>Control de calidad de suelos </h3>
     </div>
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
+        <div class="row descripcion-servicio">
+            <p class="fs-5">
+                El control de calidad de los suelos mediante pruebas de compactación, utilizando métodos como el cono de
+                arena y el densímetro nuclear, es esencial en la ingeniería civil y la construcción para evaluar la
+                capacidad de soporte y la densidad de los suelos. A continuación, se describen brevemente ambos métodos:
 
-        <div class="container">
-            <h2 class="text-center " data-section="proyectos" data-value="titulo">TITULO AQUÍ</h2>
-            <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <!--<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>-->
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="row justify-content-center">
-                            <div class="col-md ">
-                                <div class="card" style="width: 100%;">
-                                    <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
-                                        class="card-img-top imagen-proyectos" alt="...">
-                                    <div class="card-body">
-                                        <p class="card-text">Prueba aerodromo los brasiles</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="card" style="width: 100%">
-                                    <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                        alt="...">
-                                    <div class="card-body">
-                                        <p class="card-text">texto aquí</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="card" style="width: 100%">
-                                    <img src="./img/proyectos/AEROPUERTO_CORN_ISLAND.jpg"
-                                        class="card-img-top imagen-proyectos" alt="...">
-                                    <div class="card-body">
-                                        <p class="card-text">AEROPUERTO CORN ISLAND</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row justify-content-center">
-                            <div class="col-md ">
-                                <div class="card" style="width: 100%;">
-                                    <img src="./img/proyectos/PRUEBA_AERODROMO_LOS_BRASILES.JPG"
-                                        class="card-img-top imagen-proyectos" alt="...">
-                                    <div class="card-body">
-                                        <p class="card-text">Prueba aerodromo los brasiles</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="card" style="width: 100%">
-                                    <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                        alt="...">
-                                    <div class="card-body">
-                                        <p class="card-text">texto aquí</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="card" style="width: 100%">
-                                    <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
-                                        alt="...">
-                                    <div class="card-body">
-                                        <p class="card-text">texto aquí</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
+            </p>
+        </div>
+        <div class="row descripcion-servicio">
+            <div class="col-md">
+
+                <div class="card card-desc">
+                    <div class="card-body">
+                        <h4 class="text-center fs-5">Prueba de Compactación con Cono de Arena
+                        </h4>
+                        <p> Se realiza con el propósito de evaluar la densidad máxima y la humedad óptima de un suelo
+                            compactado.
+                            <br> <br>
+                            <b>Procedimiento:</b> <br>Se extrae una muestra representativa del suelo.
+                            Se mide la humedad inicial de la muestra.
+                            Se coloca una capa del suelo en el molde de compactación y se compacta utilizando el cono de
+                            arena.
+                            Se mide la densidad seca y la humedad después de la compactación.
+                            Se repite el proceso con diferentes contenidos de humedad para determinar la curva de
+                            compactación.
+
+                        </p>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            </div>
+            <div class="col-md">
+
+                <div class="card card-desc">
+                    <div class="card-body">
+                        <h4 class="text-center fs-5">Prueba de Compactación con Densímetro Nuclear</h4>
+                        <p>
+                            Se realiza con el propósito de medir la densidad in situ de un suelo y proporcionar
+                            información sobre la calidad de la compactación.
+
+                            <br> <br>
+                            <b> Procedimiento:</b><br>
+                            Se coloca el densímetro nuclear sobre la superficie del suelo compactado.
+                            Se emite una fuente de radiación gamma hacia el suelo.
+                            El densímetro mide la radiación dispersa, que está relacionada con la densidad del suelo.
+                            Se repite el proceso en varios puntos para obtener datos representativos.
+
+
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
