--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                 <img src="./img/proyectos/BONANZA_HEMCO.JPG" class="card-img-top imagen-proyectos"
                                     alt="...">
                                 <div class="card-body">
-                                    <p class="card-text">texto aquí</p>
+                                    <p class="card-text">BONANZA HEMCO</p>
                                 </div>
                             </div>
                         </div>
