--- a/estudios-geotecnicos.html
+++ b/estudios-geotecnicos.html
@@ -64,8 +64,8 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" data-section="nav" data-value="idioma">
-                            Idioma
+                            aria-expanded="false">
+                            <img src="./img/icons/lang_icon.png" class="lang-icon">
                         </a>
                         <ul class="dropdown-menu" id="idioma">
                             <li><a class="dropdown-item" data-language="es" href="#"> <img
