Cambios en los json e información en los html

--- a/control-de-calidad-de-suelos.html
+++ b/control-de-calidad-de-suelos.html
@@ -82,7 +82,7 @@
     </nav>
     <!-- AQUÍ TERMINA EL NAVBAR-->
     <div class="container-fluid azul texto-blanco banner-azul d-flex align-items-center justify-content-center">
-        <h3>Control de calidad de suelos </h3>
+        <h3 data-section="control-cal-suelos" data-value="titulo">Control de calidad de suelos </h3>
     </div>
 
 
