--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,400;1,500&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="./img/favicon.png">
+    <link rel="shortcut icon" href="./img/favicon.png">
 </head>
 
 <body style="background-color: #0b293d !important;">
@@ -57,7 +57,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav" data-value="proyectos">Proyectos</a>
+                        <a class="nav-link" href="nuestros-proyectos.html" data-section="nav"
+                            data-value="proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html" data-section="nav" data-value="contacto">Contacto</a>
@@ -87,98 +88,153 @@
 
 
     <div class="container-fluid rounded-top-4 banner-blanco">
-        <div class="row container">
-            <div class="col-md descripcion-servicio">
-                <p>Nuestro fundador: <strong>Msc. Ing. Oscar Osvaldo Jirón Boza</strong> </p>
-                <p class="lh-base">En 1972 inició sus estudios de Ingeniería Civil en la UNAN Managua, su primer trabajo
-                    fue en el MOP
-                    (Ministerio de Obras Públicas) a partir de enero de 1978, en 1979 laboró durante 9 años en el MICONS
-                    (Ministerio de la Construcción) hasta finales de 1988 cuando sale a estudiar la Maestría de Mecánica
-                    de Suelos en la UNAM, México. Al retornar a Nicaragua a inicios de 1991 hasta 1993 laboró en CEICOSA
-                    y luego en LLANSA. Ese mismo año es llamado a laborar en LAMSA para ocupar el cargo de jefe del
-                    departamento de Laboratorio y Perforación durante 8 años. En 2001 paso a laborar en MECO-SANTA FE
-                    como jefe de Control de Calidad de proyectos por año y medio.
-                </p>
-                <p class="lh-base">
-                    En el año 2003, el Ingeniero Oscar Osvaldo Jirón Boza, viendo la necesidad que tenía Nicaragua en el
-                    campo de la ingeniería, de desarrollar técnicamente y cuantitativamente la rama de estudios
-                    geotécnicos y de materiales de construcción, fundó la empresa GEONIC que es una empresa que ofrece
-                    de manera general servicios de geotecnia y control de calidad de materiales.
-                </p>
-            </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md descripcion-servicio">
+                    <p class="lh-base"> <strong>GEONICSA</strong>, una firma consultora con más de dos décadas de experiencia, se
+                        estableció con el compromiso de realizar nuestro trabajo con los estándares de calidad y
+                        excelencia que nos han definido desde nuestra fundación hasta la actualidad.
+                        <br><br>
+
+                        Nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas,
+                        respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro
+                        trabajo.
+                        <br><br>
+
+                        En GEONICSA, abogamos por la transparencia y sinceridad en todas nuestras interacciones con
+                        clientes tanto nacionales como internacionales. Este enfoque nos permite garantizar la claridad
+                        necesaria para mantener la calidad en cada uno de nuestros servicios.
+
+                    </p>
+                </div>
 
 
-            <div class="col-md justify-content-center">
-                <img src="./img/banner_inicio.jpg"
-                    class="img-fluid imagen-servicio mx-auto d-block"  alt="...">
+                <div class="col-md justify-content-center">
+                    <img src="./img/banner_inicio.jpg" class="img-fluid imagen-servicio mx-auto d-block" alt="...">
+                </div>
             </div>
-        </div>
-        <hr>
-        <div class="row container">
-            <div class="col-md-5 descripcion-servicio">
-                <img src="./img/sobre-nosotros3.jpg" class="imagen-servicio justify-content-center" alt="" >
+            <hr>
+            <div class="row">
+                <div class="col-md descripcion-servicio">
+                    <h3>Nuestro fundador: <strong>Msc. Ing. Oscar Osvaldo Jirón Boza</strong> </h3>
+                    <p class="lh-base">En 1972 inició sus estudios de Ingeniería Civil en la UNAN Managua, su primer
+                        trabajo
+                        fue en el MOP
+                        (Ministerio de Obras Públicas) a partir de enero de 1978, en 1979 laboró durante 9 años en el
+                        MICONS
+                        (Ministerio de la Construcción) hasta finales de 1988 cuando sale a estudiar la Maestría de
+                        Mecánica
+                        de Suelos en la UNAM, México. Al retornar a Nicaragua a inicios de 1991 hasta 1993 laboró en
+                        CEICOSA
+                        y luego en LLANSA. Ese mismo año es llamado a laborar en LAMSA para ocupar el cargo de jefe del
+                        departamento de Laboratorio y Perforación durante 8 años. En 2001 paso a laborar en MECO-SANTA
+                        FE
+                        como jefe de Control de Calidad de proyectos por año y medio.
+                    </p>
+                    <p class="lh-base">
+                        En el año 2003, el Ingeniero Oscar Osvaldo Jirón Boza, viendo la necesidad que tenía Nicaragua
+                        en el
+                        campo de la ingeniería, de desarrollar técnicamente y cuantitativamente la rama de estudios
+                        geotécnicos y de materiales de construcción, fundó la empresa GEONIC que es una empresa que
+                        ofrece
+                        de manera general servicios de geotecnia y control de calidad de materiales.
+                    </p>
+                </div>
+
+
+                
             </div>
-            <div class="col-md descripcion-servicio">
-                <p>GEONIC mantiene relaciones directas con privados, instituciones del estado, e intercambios de
-                    servicios
-                    con Firmas Consultoras y Constructoras nacionales e internacionales, mencionando algunas de ellas y
-                    trabajos realizados, a continuación:
-                </p>
-                <div class="d-flex" style="height: fit-content;">
-                    <div class="vr"></div>
-                    <div>
-                        <ul>
-                            <li>
-                                <b>ROUGHTON</b>: Estudios geotécnicos de Carreteras y Puentes en Costa Rica, incluyendo
-                                la instalación de un
-                                Laboratorio de Suelos. Carretera Malpaisillo-Villa 15 de Julio.
-                            </li>
-                            <li>
-                                <b>EDICO</b>: Estudio geotécnico de la Carretera Río Blanco-Mulukuku (tramo puente
-                                Mulukuku, 4 km).
-                            </li>
-                            <li>
-                                <b>TEC</b>: Estudio geotécnico de Carretera y Puentes Pantasma-Wiwilí. Circunvalación de
-                                Masaya.
-                            </li>
-                            <li>
-                                <b>EAAI</b>: Estudio de Suelos para la Ampliación en 800 m de Pista Aeropuerto A. C. S.
-                                Managua (2006).
-                            </li>
-                            <li>
-                                <b>INABENSA</b>: Cimentación del interconectado eléctrico SIEPAC desde Peñas Blancas al Guasaule. En Guatemala, tramo Chiquimula, Zacapa y Sta. Rosa, incluyendo la instalación de un Laboratorio de Suelos.
-                            </li>
-                            <li>
-                                <b>CEMEX</b>: Fábrica de Clinker para cemento en Cuesta la Refinería, Managua.
-                            </li>
-                            <li>
-                                <b>ALMA</b>: Estudio Geotécnico y Pavimento en numerosas Calles y Cauces de Managua.
-                            </li>
-                            <li>
-                                <b>ICC</b>: Estudio Geotécnico Presa Hidropantasma. Presa Tumarín (250 Megas).
-                            </li>
-                            <li>
-                                <b>ALBA</b>: Estudio Geotécnico de Generación Eólica La Fe, Rivas (22 torres). Proyecto Planta Los Brasiles (140 MW), entre otros.
-                            </li>
-                            <li>
-                                <b>CONINCASA</b>: Ampliación Puerto Corinto. Suelos y Pavimento de Caminos a Presas PCF y Larreynaga. Pistas Corn Island y Bluefields. Pista Los Brasiles. Pista Punta Huete. Estudio Geotécnico y Pavimento de Calles de Rodajes y Estacionamientos Aeropuerto ACS.
-                            </li>
-                            <li>
-                                <b>MECO</b>: Estudio Geotécnico Puente Bopal, sobre el río Grande de Matagalpa. Puente Paso a Desnivel La Robelo. Ampliación Cauce Oriental.
-                            </li>
-                            <li>
-                                <b>VACSA</b>: CEDIS, km 13 carretera Vieja a León. Varias Plantas Industriales en Zona Franca Saratoga. Puesto Fronterizo San Pancho con Costa Rica. Chequeo de Relleno Grupo Q, Pista Jean Paul Genie, entre otros múltiples.
-                            </li>
-                        </ul>
+            <hr>
+            <div class="row">
+                <div class="col-md-5 descripcion-servicio">
+                    <img src="./img/sobre-nosotros3.jpg" class="imagen-servicio justify-content-center" alt="">
+                </div>
+                <div class="col-md descripcion-servicio">
+                    <p> <strong>GEONICSA</strong> mantiene relaciones directas con privados, instituciones del estado, e intercambios de
+                        servicios
+                        con Firmas Consultoras y Constructoras nacionales e internacionales, mencionando algunas de
+                        ellas y
+                        trabajos realizados, a continuación:
+                    </p>
+                    <div class="d-flex" style="height: fit-content;">
+                        <div class="vr"></div>
+                        <div>
+                            <ul>
+                                <li>
+                                    <b>ROUGHTON</b>: Estudios geotécnicos de Carreteras y Puentes en Costa Rica,
+                                    incluyendo
+                                    la instalación de un
+                                    Laboratorio de Suelos. Carretera Malpaisillo-Villa 15 de Julio.
+                                </li>
+                                <li>
+                                    <b>EDICO</b>: Estudio geotécnico de la Carretera Río Blanco-Mulukuku (tramo puente
+                                    Mulukuku, 4 km).
+                                </li>
+                                <li>
+                                    <b>TEC</b>: Estudio geotécnico de Carretera y Puentes Pantasma-Wiwilí.
+                                    Circunvalación de
+                                    Masaya.
+                                </li>
+                                <li>
+                                    <b>EAAI</b>: Estudio de Suelos para la Ampliación en 800 m de Pista Aeropuerto A. C.
+                                    S.
+                                    Managua (2006).
+                                </li>
+                                <li>
+                                    <b>INABENSA</b>: Cimentación del interconectado eléctrico SIEPAC desde Peñas Blancas
+                                    al
+                                    Guasaule. En Guatemala, tramo Chiquimula, Zacapa y Sta. Rosa, incluyendo la
+                                    instalación
+                                    de un Laboratorio de Suelos.
+                                </li>
+                                <li>
+                                    <b>CEMEX</b>: Fábrica de Clinker para cemento en Cuesta la Refinería, Managua.
+                                </li>
+                                <li>
+                                    <b>ALMA</b>: Estudio Geotécnico y Pavimento en numerosas Calles y Cauces de Managua.
+                                </li>
+                                <li>
+                                    <b>ICC</b>: Estudio Geotécnico Presa Hidropantasma. Presa Tumarín (250 Megas).
+                                </li>
+                                <li>
+                                    <b>ALBA</b>: Estudio Geotécnico de Generación Eólica La Fe, Rivas (22 torres).
+                                    Proyecto
+                                    Planta Los Brasiles (140 MW), entre otros.
+                                </li>
+                                <li>
+                                    <b>CONINCASA</b>: Ampliación Puerto Corinto. Suelos y Pavimento de Caminos a Presas
+                                    PCF
+                                    y Larreynaga. Pistas Corn Island y Bluefields. Pista Los Brasiles. Pista Punta
+                                    Huete.
+                                    Estudio Geotécnico y Pavimento de Calles de Rodajes y Estacionamientos Aeropuerto
+                                    ACS.
+                                </li>
+                                <li>
+                                    <b>MECO</b>: Estudio Geotécnico Puente Bopal, sobre el río Grande de Matagalpa.
+                                    Puente
+                                    Paso a Desnivel La Robelo. Ampliación Cauce Oriental.
+                                </li>
+                                <li>
+                                    <b>VACSA</b>: CEDIS, km 13 carretera Vieja a León. Varias Plantas Industriales en
+                                    Zona
+                                    Franca Saratoga. Puesto Fronterizo San Pancho con Costa Rica. Chequeo de Relleno
+                                    Grupo
+                                    Q, Pista Jean Paul Genie, entre otros múltiples.
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
+
 
 
         <!--CONTACTANOS-->
         <div class="container text-center ">
-            <a class="btn btn-contacto texto-blanco fs-5" data-section="inicio" data-value="btn-contactanos" href="#" role="button">Contáctanos</a>
+            <a class="btn btn-contacto texto-blanco fs-5" data-section="inicio" data-value="btn-contactanos" href="#"
+                role="button">Contáctanos</a>
         </div>
         <!--CONTACTANOS-->
     </div>
